--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
         "embla-carousel-react": "^8.5.2",
         "framer-motion": "^12.23.24",
         "input-otp": "^1.4.2",
+        "lucide": "^0.552.0",
         "lucide-react": "^0.484.0",
         "marked": "^15.0.7",
         "next-themes": "^0.4.6",
@@ -67,6 +68,7 @@
         "react": "^19.0.0",
         "react-day-picker": "^9.6.7",
         "react-dom": "^19.0.0",
+        "react-dropzone": "^14.3.8",
         "react-error-boundary": "^6.0.0",
         "react-hook-form": "^7.54.2",
         "react-resizable-panels": "^2.1.7",
@@ -78,7 +80,8 @@
         "tw-animate-css": "^1.2.4",
         "uuid": "^11.1.0",
         "vaul": "^1.1.2",
-        "zod": "^3.25.76"
+        "zod": "^3.25.76",
+        "zustand": "^5.0.8"
     },
     "devDependencies": {
         "@eslint/js": "^9.21.0",
