--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "crypto-js": "^4.2.0",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.23.24",
     "input-otp": "^1.4.2",
