--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "lucide": "^0.552.0",
     "lucide-react": "^0.484.0",
     "marked": "^15.0.7",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "octokit": "^4.1.2",
     "react": "^19.0.0",
