--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.1",
+    "@tanstack/react-table": "^8.21.3",
     "@types/lodash-es": "^4.17.12",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.13.1",
