--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "@types/babel__generator": "^7.27.0",
     "@types/babel__template": "^7.4.4",
     "@types/babel__traverse": "^7.28.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/estree": "^1.0.8",
     "@types/jest": "^30.0.0",
     "@types/json-schema": "^7.0.15",
