--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
     "rewrites": [
         {
+            "source": "/api/:path*",
+            "destination": "https://giangvien.org/gateway/ban-ve/api/:path*"
+        },
+        {
             "source": "/(.*)",
             "destination": "/index.html"
         }
