--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tanstack/react-table": "^8.21.3",
     "@types/lodash-es": "^4.17.12",
     "@types/react-router-dom": "^5.3.3",
+    "@uiw/react-watermark": "^1.0.1",
     "axios": "^1.13.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
