--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "lucide-react": "^0.484.0",
     "marked": "^15.0.7",
     "motion": "^12.23.24",
-    "next": "^16.0.5",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "octokit": "^4.1.2",
     "react": "^19.0.0",
