--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "lucide-react": "^0.560.0",
     "marked": "^15.0.7",
     "motion": "^12.23.24",
+    "next": "^16.1.1",
     "next-themes": "^0.4.6",
     "octokit": "^4.1.2",
     "react": "^19.0.0",
