fix: auth login

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,10 @@ dist
 dist-ssr
 *-dist
 *.local
-
+.next
+build
+dist
+dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
