--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.83.1",
     "@tanstack/react-table": "^8.21.3",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/lodash-es": "^4.17.12",
     "@types/react-router-dom": "^5.3.3",
     "@uiw/react-watermark": "^1.0.1",
     "axios": "^1.13.1",
+    "canvas-confetti": "^1.9.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
