--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.83.1",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "@tanstack/react-table": "^8.21.3",
     "@types/canvas-confetti": "^1.9.0",
     "@types/lodash-es": "^4.17.12",
