--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "marked": "^15.0.7",
     "motion": "^12.23.24",
     "next": "^16.1.1",
+    "next-nprogress-bar": "^2.4.7",
     "next-themes": "^0.4.6",
-    "nextjs-progressbar": "^0.0.16",
     "octokit": "^4.1.2",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.1",
